--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
     <div class="container">
         <div class="title-container">
-            <img src="<img src="https://raw.githubusercontent.com/beastwood12/prysm_launch_model_v1/main/images/Prysm iO_Rainbow-White-Vertical.png" alt="Description">" 
+            <img src="images/Prysm iO_Rainbow-White-Vertical.png" alt="Description">" 
                  alt="Prysm Logo" 
                  class="prysm-logo"
                  onerror="this.style.display='none'; document.querySelector('.logo-placeholder').style.display='flex';" />
