--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body { font-family: 'Segoe UI', sans-serif; margin: 0; padding: 20px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); min-height: 100vh; }
         .container { max-width: 1600px; margin: 0 auto; background: white; border-radius: 20px; padding: 30px; box-shadow: 0 20px 40px rgba(0,0,0,0.1); }
         .title-container { display: flex; align-items: center; justify-content: center; margin-bottom: 30px; }
-        .prysm-logo { width: 60px; height: 60px; margin-right: 20px; object-fit: contain; border: 2px solid #333; border-radius: 8px; padding: 4px; background: white; }
+        .prysm-logo { width: 60px; height: 60px; margin-right: 20px; object-fit: contain; background: black; border-radius: 8px; padding: 8px; }
         .logo-placeholder { width: 60px; height: 60px; margin-right: 20px; background: linear-gradient(45deg, #667eea, #764ba2); border-radius: 12px; display: flex; align-items: center; justify-content: center; }
         .logo-text { color: white; font-weight: bold; font-size: 18px; }
         h1 { color: #2c3e50; font-size: 2.5em; margin: 0; background: linear-gradient(45deg, #667eea, #764ba2); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
